tests/fixtures/negative/style/ForbiddenComment.kt
package style

// Fixed in PR #123
fun example() {
    // Handles edge case for empty input
    println("hello")
}
